# fastapi-template

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  sql_app.db
app/: auth.py  main.py  router.py
app/base/: crud.py  database.py  models.py  schemas.py
